// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedSubjectDataPage renders correctly 1`] = `
<SubjectDataPage
  currentSubjectId=""
  deleteSubjectData={[Function]}
  editSubjectData={[Function]}
  fetchSDById={[Function]}
  fetchSubjectByTabId={[Function]}
  fields={Array []}
  history={
    Object {
      "push": [Function],
    }
  }
  match={
    Object {
      "params": Object {
        "_id": "1",
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  subjectData={Object {}}
  tabs={Array []}
/>
`;

exports[`UnconnectedSubjectDataPage renders correctly when \`subjectData._id\` is not empty 1`] = `
<Segment
  basic={true}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": 500,
    }
  }
>
  <SubjectDataForm
    delete={[Function]}
    fields={Array []}
    subjectData={
      Object {
        "_id": "2",
        "tabId": "3",
      }
    }
    submit={[Function]}
    tabs={Array []}
  />
</Segment>
`;

exports[`UnconnectedSubjectDataPage when \`subjectData._id\` is empty renders correctly after \`fetchSDById\` and \`fetchSubjectByTabId\` finishes successfully 1`] = `
<Segment
  basic={true}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": 500,
    }
  }
>
  <SubjectDataForm
    delete={[Function]}
    fields={Array []}
    subjectData={
      Object {
        "tabId": "3",
      }
    }
    submit={[Function]}
    tabs={Array []}
  />
</Segment>
`;

exports[`UnconnectedSubjectDataPage when \`subjectData._id\` is empty renders correctly after \`fetchSDById\` finishes with failure 1`] = `
<Segment
  basic={true}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": 500,
    }
  }
>
  <ErrorMessage
    showHeader={true}
    text="Internal server error"
  />
</Segment>
`;

exports[`UnconnectedSubjectDataPage when \`subjectData._id\` is empty renders correctly before \`fetchSDById\` finishes 1`] = `
<Segment
  basic={true}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": 500,
    }
  }
>
  <Loader
    active={true}
    inline="centered"
  />
</Segment>
`;
